--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 body {
 	text-align: center;
-	background-image: url(images/bg-header-desktop.png);
+	background-image: url(bg-header-desktop.png);
 	background-repeat: no-repeat;
 	font-family: 'Bai Jamjuree', sans-serif;
 }
@@ -176,7 +176,7 @@ p {
 
 body {
 	text-align: center;
-	background-image: url(images/bg-header-mobile.png);
+	background-image: url(bg-header-mobile.png);
 	background-repeat: no-repeat;
 	font-family: 'Bai Jamjuree', sans-serif;
 }
