--- a/style.css
+++ b/style.css
@@ -178,6 +178,7 @@ body {
 	text-align: center;
 	background-image: url(bg-header-mobile.png);
 	background-repeat: no-repeat;
+	max-width: 375px;
 	font-family: 'Bai Jamjuree', sans-serif;
 }
 
